# MAI_OOP

./: README.md
lab1/: CMakeLists.txt
lab1/include/: Solution.hpp
lab1/src/: Solution.cpp  main.cpp  tests.cpp
lab2/: CMakeLists.txt
lab2/include/: Thirdteen.hpp
lab2/src/: Thirdteen.cpp  main.cpp  tests.cpp
lab3/: CMakeLists.txt
lab3/include/: Vector.hpp
lab3/include/Containers/: Array.hpp  FigureVector.hpp
lab3/include/Figures/: Figure.hpp  Quadangle.hpp  Rectangle.hpp  Rhombus.hpp  Trapezoid.hpp
lab3/src/: Vector.cpp  main.cpp
lab3/src/Figures/: Quadangle.cpp  Rectangle.cpp  Rhombus.cpp  Trapezoid.cpp
lab3/src/tests/: quadangleTests.hpp  rectangleTests.hpp  rhombusTests.hpp  trapezoidTests.hpp  vectorTests.hpp
lab4/include/: Vector.hpp
lab4/include/Containers/: Array.hpp  FigureVector.hpp
lab4/include/Figures/: Figure.hpp  Quadangle.hpp  Rectangle.hpp  Rhombus.hpp  Trapezoid.hpp
lab4/src/: main.cpp
lab4/src/tests/: arrayTests.hpp  quadangleTests.hpp  rectangleTests.hpp  rhombusTests.hpp  tests.cpp  trapezoidTests.hpp  vectorTests.hpp
lab5/: CMakeLists.txt
lab5/include/: Allocator.hpp  Array.hpp  Iterator.hpp
lab5/src/: main.cpp
lab5/src/tests/: allocatorTests.hpp  arrayTests.hpp  iteratorTests.hpp  tests.cpp
lab6/: CMakeLists.txt
lab6/include/: Factory.hpp  NPC.hpp  Scene.hpp
lab6/src/: Factory.cpp  NPC.cpp  Scene.cpp  Visitor.cpp  main.cpp
lab6/src/tests/: factory.hpp  npc.hpp  observer.hpp  tests.cpp
lab7/include/: Factory.hpp  NPC.hpp  Observer.hpp  Scene.hpp  Visitor.hpp
lab7/src/: Factory.cpp  NPC.cpp  Observer.cpp  Scene.cpp  Visitor.cpp  main.cpp
lab7/src/tests/: factory.hpp  npc.hpp  observer.hpp  tests.cpp  visitor.hpp
